exports[`Component: SearchResults when given a one result should render a correctly worded message 1`] = `
<div>
  <p>
    <b>
      foo
    </b>
     found 
    1
     
    result
  </p>
  <ul
    className="SearchResultsList_96vuga">
    <li>
      <div>
        <p>
          foo
        </p>
        <img
          alt="foo"
          height={130}
          src="avatar.jpg"
          width={130} />
      </div>
    </li>
  </ul>
</div>
`;

exports[`Component: SearchResults when given a set of results and entities should render them with a message 1`] = `
<div>
  <p>
    <b>
      foo
    </b>
     found 
    2
     
    results
  </p>
  <ul
    className="SearchResultsList_96vuga">
    <li>
      <div>
        <p>
          foo
        </p>
        <img
          alt="foo"
          height={130}
          src="avatar.jpg"
          width={130} />
      </div>
    </li>
    <li>
      <div>
        <p>
          foobar
        </p>
        <img
          alt="foobar"
          height={130}
          src="avatar.jpg"
          width={130} />
      </div>
    </li>
  </ul>
</div>
`;

exports[`Component: SearchResults when the results are 0 should not render a message 1`] = `
<div>
  <ul
    className="SearchResultsList_96vuga" />
</div>
`;
